--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,4 +109,6 @@
     <string name="add_case_report">添加病历</string>
     <string name="select_new_follow_up_for_patient">为患者选择新的随访方案</string>
 
+    <!--添加患者-->
+    <string name="patient_add_title">添加患者</string>
 </resources>
