注册选择地区修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="evip_hospital">选择执业医院</string>
     <string name="evip_office">选择科室</string>
     <string name="evip_phone">科室电话</string>
+    <string name="evip_other_hospital">其它医院</string>
     <string name="evip_ranks">职称</string>
     <string name="evip_brief">个人简介</string>
 
