--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,4 +174,5 @@
     <string name="prompt">提示</string>
     <string name="confirm_delete_this_patient">您是否要删除患者：%s？患者将不再收到您的随访相关消息。</string>
     <string name="confirm">确认</string>
+    <string name="age_xx">年龄：%s岁</string>
 </resources>
