--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,9 +48,10 @@
 
     <!--register-->
     <string name="register_password">登录密码</string>
-    <string name="register_login">已有帐号</string>
+    <string name="register_login">已有账号,登录</string>
     <string name="register_agree">我已阅读并同意</string>
-    <string name="register_order">《咨询医师协议》</string>
+    <string name="visit_code">邀请码</string>
+    <string name="register_order">《好心情用户服务协议》</string>
 
     <!--forgetpassword-->
     <string name="forget_pw_text">忘记密码</string>
